fetches and lists and checks for errors

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Amiko' rel='stylesheet'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Git it Done</title>
@@ -20,7 +21,21 @@
 
 
   <main class="flex-row justify-space-between">
+    <div class="col-12 col-md-4">
+      <div class="card">
+        <h3 class="card-header text-uppercase">Search By User</h3>
+        <form id="user-form" class="card-body">
+          <label class="form-label" for="username">Username</label>
+          <input name="username" id="username" type="test" autofocus="true" class="form-input" />
+          <button type="submit" class="btn">Get User</button>
+        </form>
+      </div>
+    </div>
 
+    <div class="col-12 col-md-8">
+    <h2 class="subtitle">Showing Repositories For: <span id="repo-search-term"></span></h2>
+    <div id="repos-container" class="list-group"></div>
+  </div>
   </main>
 
   <script src="assets/js/homepage/homepage.js"></script>
