--- a/single-repo.html
+++ b/single-repo.html
@@ -22,10 +22,9 @@
   </header>
   
   <main>
-    <div id="issues-container" class="list-group">
+    <div id="issues-container" class="list-group"></div>
 
-
-    </div>
+    <div id = "limit-warning"></div>
   
   </main>
 
